--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,22 @@
-Package: WWC2
+Package: WWC
 Type: Package
-Title: What the Package Does (Title Case)
+Title: Weighing the Wisdom of the Crowd
 Version: 0.1.0
-Author: Who wrote it
-Maintainer: Who to complain to <yourfault@somewhere.net>
-Description: More about what it does (maybe more than one line)
-License: What license is it under?
+Authors@R: c(person("Heather", "Krause", email = "heather@idatassist.com", role = c("aut")),
+             person("Julia", "Silge", email = "julia.silge@gmail.com", role = c("aut", "cre")))
+Description: Functions for Datassist's Knight Foundation project for weighting 
+        crowd-sourced surveys. The weighting algorithm uses post-stratification 
+        to weight survey results by age, gender, education, and race/ethnicity 
+        and can work at the national, state, or county level of geography 
+        (currently US only).
+URL: https://github.com/heathermkrause/WWC
+BugReports: https://github.com/heathermkrause/WWC/issues
+License: MIT + file LICENSE
 LazyData: TRUE
+Depends: R (>= 2.10)
+Imports: dplyr,
+        acs
+Suggests: ggplot2,
+        knitr
+VignetteBuilder: knitr
+RoxygenNote: 5.0.1
