--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,7 +14,9 @@ BugReports: https://github.com/heathermkrause/WWC/issues
 License: MIT + file LICENSE
 LazyData: TRUE
 Depends: R (>= 2.10)
-Imports: dplyr,
+Imports: purrr,
+        dplyr,
+        reshape2,
         acs
 Suggests: ggplot2,
         knitr
