--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,6 +16,7 @@ LazyData: TRUE
 Depends: R (>= 2.10)
 Imports: purrr,
         dplyr,
+        stringr,
         reshape2,
         acs
 Suggests: ggplot2,
