--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export(process_acs_age)
 export(process_acs_education)
 export(simulate_survey)
-export(simulate_true_response)
+export(simulate_true_response_age)
 import(dplyr)
+importFrom(purrr,contains)
 importFrom(stringr,str_extract)
