--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(process_acs_age)
 export(process_acs_education)
 export(simulate_survey)
 export(simulate_true_response_age)
+export(simulate_true_response_education)
 import(dplyr)
 importFrom(purrr,contains)
 importFrom(stringr,str_extract)
