Add col_name to utils.R; try out tbl_df input for survey package functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(process_acs_education)
 export(simulate_survey)
 export(simulate_true_response_age)
 export(simulate_true_response_education)
+export(weight_age_one)
 import(dplyr)
 importFrom(purrr,contains)
 importFrom(stringr,str_extract)
