Import melt from reshape2

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,4 +8,5 @@ export(simulate_true_response_education)
 export(weight_age_one)
 import(dplyr)
 importFrom(purrr,contains)
+importFrom(reshape2,melt)
 importFrom(stringr,str_extract)
