--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,7 +15,7 @@ License: MIT + file LICENSE
 LazyData: TRUE
 Depends: R (>= 2.10)
 Imports: purrr,
-        dplyr,
+        dplyr (>= 0.4.3.9001),
         stringr,
         reshape2,
         acs,
