Make formulae for inputs to survey functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,4 +8,5 @@ export(simulate_true_response_education)
 export(weight_age_one)
 import(dplyr)
 importFrom(reshape2,melt)
+importFrom(stats,as.formula)
 importFrom(stringr,str_extract)
