New function to export

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(simulate_survey)
 export(simulate_true_response_age)
 export(simulate_true_response_education)
 export(weight_age_one)
+export(weight_education_one)
 import(dplyr)
 importFrom(reshape2,melt)
 importFrom(stats,as.formula)
