Make NSE/SE versions of weighting functions for programming with

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,7 +6,9 @@ export(simulate_survey)
 export(simulate_true_response_age)
 export(simulate_true_response_education)
 export(weight_age_one)
+export(weight_age_one_)
 export(weight_education_one)
+export(weight_education_one_)
 import(dplyr)
 importFrom(reshape2,melt)
 importFrom(stats,as.formula)
