--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,8 @@ export(process_acs_education)
 export(simulate_survey)
 export(simulate_true_response_age)
 export(simulate_true_response_education)
+export(weight_age)
+export(weight_age_)
 export(weight_age_one)
 export(weight_age_one_)
 export(weight_education_one)
