New function to summarize survey with post-stratification weights data frame

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,8 @@ export(process_acs_education)
 export(simulate_survey)
 export(simulate_true_response_age)
 export(simulate_true_response_education)
+export(summarize_survey)
+export(summarize_survey_)
 export(weight_age)
 export(weight_age_)
 export(weight_age_one)
