Function to weight survey using data from educational attainment tables

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,8 @@ export(weight_age)
 export(weight_age_)
 export(weight_age_one)
 export(weight_age_one_)
+export(weight_education)
+export(weight_education_)
 export(weight_education_one)
 export(weight_education_one_)
 import(dplyr)
