New function for weighting by one more indicators (single function, not separate)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,8 @@ export(weight_age)
 export(weight_age_)
 export(weight_education)
 export(weight_education_)
+export(weight_wwc)
+export(weight_wwc_)
 import(dplyr)
 importFrom(reshape2,melt)
 importFrom(stats,as.formula)
