--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export(process_acs_age)
 export(process_acs_education)
 export(simulate_survey)
+export(simulate_survey_continuous)
 export(simulate_true_response_age)
 export(simulate_true_response_education)
 export(summarize_survey)
