--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,14 +8,14 @@ Description: Functions for Datassist's Knight Foundation project for weighting
         crowd-sourced surveys. The weighting algorithm uses post-stratification 
         to weight survey results by age, gender, education, and race/ethnicity 
         and can work at the national, state, or county level of geography 
-        (currently US only).
+        (US only).
 URL: https://github.com/heathermkrause/WWC
 BugReports: https://github.com/heathermkrause/WWC/issues
 License: MIT + file LICENSE
 LazyData: TRUE
 Depends: R (>= 2.10)
 Imports: purrr,
-        dplyr (>= 0.4.3.9001),
+        dplyr,
         stringr,
         reshape2,
         acs,
