Import rpois from stats, and use NAs in mean of lambda

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,4 +17,5 @@ export(weight_wwc_)
 import(dplyr)
 importFrom(reshape2,melt)
 importFrom(stats,as.formula)
+importFrom(stats,rpois)
 importFrom(stringr,str_extract)
