--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(summarize_survey)
 export(summarize_survey_)
 export(weight_age)
 export(weight_age_)
+export(weight_csv)
 export(weight_education)
 export(weight_education_)
 export(weight_wwc)
