New function to fetch/process all county 5-year data

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,4 +19,6 @@ import(dplyr)
 importFrom(reshape2,melt)
 importFrom(stats,as.formula)
 importFrom(stats,rpois)
+importFrom(stringr,str_c)
 importFrom(stringr,str_extract)
+importFrom(stringr,str_sub)
