Weighting function removes survey observations that have NA values in weighting indicator columns.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,6 +22,7 @@ export(weight_wwc_)
 import(dplyr)
 importFrom(reshape2,melt)
 importFrom(stats,as.formula)
+importFrom(stats,complete.cases)
 importFrom(stats,rpois)
 importFrom(stringr,str_c)
 importFrom(stringr,str_extract)
