Move acs package to Suggests since we only use that in data-raw now

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -20,11 +20,11 @@ Imports: purrr,
         stringr,
         tidyr,
         reshape2,
-        acs,
         survey,
         readr
 Suggests: ggplot2,
         knitr,
-        testthat
+        testthat,
+        acs
 VignetteBuilder: knitr
 RoxygenNote: 5.0.1
