--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,6 +18,7 @@ Depends: R (>= 2.10)
 Imports: purrr,
         dplyr,
         stringr,
+        modelr,
         tidyr,
         reshape2,
         survey,
